JumpScript/tests/baselines/reference/propertyAccessibility2.errors.txt
tests/cases/compiler/propertyAccessibility2.jump(4,11): error TS2341: Property 'x' is private and only accessible within class 'C'.


==== tests/cases/compiler/propertyAccessibility2.jump (1 errors) ====
    class C {
      private static x = 1;
    }
    var c = C.x;
              ~
!!! error TS2341: Property 'x' is private and only accessible within class 'C'.
    